# streamlit-whalesharks

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  reset_s3_mapping.ipynb
.streamlit/: config.toml
app/: Home.py  main.py  utils.py
app/pages/: 01_About.py  02_Raw Data.py  03_ClassifierForm.py  04_Classified Sightings.py  05_Unique Shark Sightings.py  06_Summary Statistics.py
data/: tablet_ids.csv
data/outputs/: trips.csv
notebooks/: testing-ground.ipynb
